# imgRCC

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
benchmarks/: benchmark_gpu.cpp  benchmark_gpu_old.rs  benchmark_grayscale.rs
cmake/: CommonConfig.cmake  CudaConfig.cmake
include/: algorithms_cpu.hpp  algorithms_gpu.hpp  common.hpp  image.hpp
rust_bindings/src/: lib.rs  main.rs
scripts/: build.sh  gpu_bench.sh
src/: benchmark.rs  kernel.rs  lib.rs  main.rs
src/cpp/: algorithms_cpu.cpp  common.cpp  image.cpp
src/cuda/: algorithms_gpu.cu  common.cu  image.cu
tests/: integration_tests.rs
