[package]
name = "img_rcc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A Rust library for image processing with CUDA, C++." 
license = "MIT"  
repository = "https://github.com/ndranathunga/imgRCC"  
documentation = "https://docs.rs/img_rcc"  
readme = "README.md" 
keywords = ["image-processing", "cuda", "rust", "benchmark", "gpu"] 
categories = ["image-processing", "algorithms", "data-processing"]  
include = [
    "src/**",
    "include/**",
    "benchmarks/**",
    "cmake/**",
    "scripts/**",
    "tests/**",
    "CMakeLists.txt",
    "Cargo.toml",
    "build.rs",
    "README.md",
    "LICENSE"
]


[dependencies]
criterion = { version = "0.5", optional = true }
# criterion = "0.5"

[dev-dependencies]

[build-dependencies]
# cmake = "0.1"  
# cc = "1.0"  

[lib]
crate-type = ["rlib"]

# [build]
# build = "build.rs"

[features]
benchmark = ["criterion"]

[[bench]]
name = "bench_gpu"
path = "benchmarks/benchmark_grayscale.rs"
harness = false
required-features = ["benchmark"]